--- a/quiz.html
+++ b/quiz.html
@@ -418,10 +418,14 @@ button img{
   color:white;
   text-align:center;
   text-shadow:
-    -3px 0   0 var(--color-dark),
-     3px 0   0 var(--color-dark),
-     0   -3px 0 var(--color-dark),
-     0    3px 0 var(--color-dark);
+    -2px -2px 0 var(--color-dark),
+     2px -2px 0 var(--color-dark),
+    -2px  2px 0 var(--color-dark),
+     2px  2px 0 var(--color-dark),
+    -2px  0   0 var(--color-dark),
+     2px  0   0 var(--color-dark),
+     0   -2px 0 var(--color-dark),
+     0    2px 0 var(--color-dark);
 }
 
 #stage-msg,
