--- a/quiz.html
+++ b/quiz.html
@@ -124,8 +124,12 @@ body::before {
   align-items: center;
   justify-content: center;
   text-shadow:
-    -2px 0   0 var(--color-dark),
-     2px 0   0 var(--color-dark),
+    -2px -2px 0 var(--color-dark),
+     2px -2px 0 var(--color-dark),
+    -2px  2px 0 var(--color-dark),
+     2px  2px 0 var(--color-dark),
+    -2px  0   0 var(--color-dark),
+     2px  0   0 var(--color-dark),
      0   -2px 0 var(--color-dark),
      0    2px 0 var(--color-dark);
 }
@@ -243,8 +247,12 @@ body::before {
   font-weight:bold;
   font-size:1rem;
   text-shadow:
-    -2px 0   0 var(--color-dark),
-     2px 0   0 var(--color-dark),
+    -2px -2px 0 var(--color-dark),
+     2px -2px 0 var(--color-dark),
+    -2px  2px 0 var(--color-dark),
+     2px  2px 0 var(--color-dark),
+    -2px  0   0 var(--color-dark),
+     2px  0   0 var(--color-dark),
      0   -2px 0 var(--color-dark),
      0    2px 0 var(--color-dark);
 }
@@ -355,7 +363,6 @@ button img{
 /* === カウントダウン === */
 #countdown-overlay{
   position:fixed;top:0;left:0;width:100%;height:100%;
-  //background:#333;
   color:#fff;display:flex;
   align-items:center;
   justify-content:center;z-index:2000;
@@ -418,14 +425,18 @@ button img{
   color:white;
   text-align:center;
   text-shadow:
+    -3px -3px 0 var(--color-dark),
+     0   -3px 0 var(--color-dark),
+     3px -3px 0 var(--color-dark),
+    -3px  0   0 var(--color-dark),
+     3px  0   0 var(--color-dark),
+    -3px  3px 0 var(--color-dark),
+     0    3px 0 var(--color-dark),
+     3px  3px 0 var(--color-dark),
     -2px -2px 0 var(--color-dark),
      2px -2px 0 var(--color-dark),
     -2px  2px 0 var(--color-dark),
-     2px  2px 0 var(--color-dark),
-    -2px  0   0 var(--color-dark),
-     2px  0   0 var(--color-dark),
-     0   -2px 0 var(--color-dark),
-     0    2px 0 var(--color-dark);
+     2px  2px 0 var(--color-dark);
 }
 
 #stage-msg,
