--- a/quiz.html
+++ b/quiz.html
@@ -390,7 +390,7 @@ function handleAnswer(selected){
     }else{
       gained = 100 + Math.floor(1 * timeLeftMs / q.answerstart * 100);
       cutinTitle = "SAFE"
-      setRankStyle('silver');
+      setRankStyle('bronze');
       
     }
     
