--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<link rel="stylesheet" href="style2.css">
+<link rel="stylesheet" href="style.css">
 <title>AI脳トレ</title>
 <script>
 // --- 問題データ ---
