--- a/tmp2.html
+++ b/tmp2.html
@@ -198,7 +198,7 @@ function setRankStyle(style) {
   <div class="quiz-header" id="quiz-header" style="">
     <span id="quiz-no">Q1　パターン認識力</span>
   </div>
-  <div class="question-box" id="question" style="">？にあてはまるのは<br><img src="images/num1.png" class="quiz-img"></div>
+  <div class="question-box" id="question" style="">片方しか助けられない。<br>どっちを助ける？</div>
   <div class="timer-container" id="timer-container" style="">
     <div class="timer-label">TIME</div>
     <div class="timer-bar"><div class="timer-progress" id="timerProgress" style="transition: none; width: 99.909%; background-color: rgb(168, 230, 161);"></div></div>
