--- a/tmp2.html
+++ b/tmp2.html
@@ -214,8 +214,8 @@ function setRankStyle(style) {
   </div>
   
   <div class="buttons mikiri" id="buttons" style="display:;">
-    <button class="" onclick='document.getElementById("buttons2").style.display="";document.getElementById("buttons").style.display="none";';>左</button>
-    <button class="" >右</button>
+    <button class="" onclick='document.getElementById("buttons2").style.display="";document.getElementById("buttons").style.display="none";';>母親</button>
+    <button class="" >恋人</button>
   </div>
   
 <!--
